sumo/tests/traci/VariableRetrieval/Lane/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Sat Oct  9 00:29:04 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=163 varID=255 objID=dummy
.. Answered with error to command (163), [description: Get Lane Variable: unsupported variable specified]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
